corrected tests and code formatting