@@ -166,6 +166,7 @@ import io.harness.cvng.servicelevelobjective.beans.slimetricspec.RatioSLIMetricS
 import io.harness.cvng.servicelevelobjective.beans.slimetricspec.ThresholdSLIMetricSpec;
 import io.harness.cvng.servicelevelobjective.beans.slimetricspec.ThresholdSLIMetricSpec.ThresholdSLIMetricSpecBuilder;
 import io.harness.cvng.servicelevelobjective.beans.slimetricspec.ThresholdType;
+import io.harness.cvng.servicelevelobjective.beans.slospec.CompositeServiceLevelObjectiveSpec;
 import io.harness.cvng.servicelevelobjective.beans.slospec.SimpleServiceLevelObjectiveSpec;
 import io.harness.cvng.servicelevelobjective.beans.slotargetspec.RollingSLOTargetSpec;
 import io.harness.cvng.servicelevelobjective.entities.RatioServiceLevelIndicator;
@@ -1060,16 +1061,19 @@ public class BuilderFactory {
                        .sloTargetPercentage(80.0)
                        .spec(RollingSLOTargetSpec.builder().periodLength("30d").build())
                        .build())
-        .serviceLevelObjectivesDetails(List.of(ServiceLevelObjectiveDetailsDTO.builder()
-                                                   .serviceLevelObjectiveRef("uuid1")
-                                                   .weightagePercentage(75.0)
-                                                   .build(),
-            ServiceLevelObjectiveDetailsDTO.builder()
-                .serviceLevelObjectiveRef("uuid2")
-                .weightagePercentage(25.0)
-                .build()))
+        .spec(CompositeServiceLevelObjectiveSpec.builder()
+                  .serviceLevelObjectivesDetails(Arrays.asList(ServiceLevelObjectiveDetailsDTO.builder()
+                                                                   .serviceLevelObjectiveRef("uuid1")
+                                                                   .weightagePercentage(75.0)
+                                                                   .build(),
+                      ServiceLevelObjectiveDetailsDTO.builder()
+                          .serviceLevelObjectiveRef("uuid2")
+                          .weightagePercentage(25.0)
+                          .build()))
+                  .build())
         .userJourneyRefs(Collections.singletonList("userJourney"));
   }
+
   public SLOErrorBudgetResetDTOBuilder getSLOErrorBudgetResetDTOBuilder() {
     return SLOErrorBudgetResetDTO.builder()
         .serviceLevelObjectiveIdentifier("slo")
